[package]
name = "teemasterparser"
version = "0.2.0"
authors = ["Edgar <git@edgarluque.com>"]
edition = "2018"
description = "Parses the data from one day in https://ddnet.tw/stats/master/ and outputs a SVG plot with total players."
license = "MIT"
repository = "https://github.com/edg-l/teemasterparser"
homepage = "https://github.com/edg-l/teemasterparser"
keywords = ["teeworlds", "ddnet", "parser", "cli"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = "3.0.1"
itertools = "0.10.3"
poloto = "3.11.1"
rayon = "1.5.1"
regex = "1.5.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
tar = "0.4.38"
time = { version = "0.3.5", features = ["macros"] }
ureq = "2.4.0"
zstd = "0.9.1"
