[package]
name = "teemasterparser"
version = "0.3.2"
authors = ["Edgar <git@edgarluque.com>"]
edition = "2021"
description = "Parses the data from one day in https://ddnet.tw/stats/master/ and outputs a SVG plot with total players."
license = "MIT"
repository = "https://github.com/edg-l/teemasterparser"
homepage = "https://github.com/edg-l/teemasterparser"
keywords = ["teeworlds", "ddnet", "parser", "cli"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive"] }
color-eyre = "0.6.2"
itertools = "0.10.5"
plotters = "0.3.4"
regex = "1.6.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tar = "0.4.38"
ureq = "2.5.0"
zstd = "0.11.2"
